--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Monthy challenge</title>
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <h1>This is this month's challenge</h1>
+    <h1>This is this second month's challenge</h1>
+  </body>
 </html>
